Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7727

open with FMODE_EXEC fails with ETXTBSY after a failed FMODE_WRITE open attempt on a read only client

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.9.0
    • None
    • 3
    • 9223372036854775807

      How to reproduce:

      we have a executable file on a read only mounted client:

      [root@client mnt]# ls -l /mnt/
      total 8
      -rwxr-xr-x 1 root root 6439 Feb  1 14:51 test
      [root@client mnt]# ./test
      Hello World!
      

      Then we try to write to the file, which will fail with EROFS:

      [root@client mnt]# echo foo >> ./test
      -bash: ./test: Read-only file system
      

      Then run the file again:

      [root@client mnt]# ./test
      -bash: ./test: Text file busy
      

      Note the executable fails to run across the whole cluster from this point, even on the clients without read only mount option.

            wc-triage WC Triage
            lidongyang Li Dongyang (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: